--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -404,7 +404,7 @@ National ability = Zdolność narodowa
 # Nations
 
 Babylon = Babilon
-Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = Otrzymaj Wielkiego Naukowca po odkryciu Pisma, Zdobądź Wielkiego Naukowca 50% szybciej
+Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = Otrzymajesz Wielkiego Naukowca po odkryciu Pisma, Zdobywasz Wielkiego Naukowca 50% szybciej
 Nebuchadnezzar II = Nabuchodonozor II
 
 Greece = Grecja
@@ -453,8 +453,7 @@ Otto von Bismark = Otto von Bismarck
 
 India = Indie
 Gandhi = Mahatma Gandhi
- # Requires translation!
-Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 
+Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = Niezadowolenie z powodu liczby Miast podwaja się, Niezadowolenie z powodu liczby obywateli Miast maleje o połowę.
 
 The Ottomans = Imperium Osmańskie
 Suleiman I = Sulejman I
@@ -482,7 +481,7 @@ Food and Culture from Friendly City-States are increased by 50% = Zasoby Pożywi
 
 Songhai = Songhaj
 Askia = Asika
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrzymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Jednostki w trybie okrętu mogą same się bronić
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Otrzymajesz potrojone Złoto z Barbażyńskich obozowisk i plądrowanych Miast. Jednostki w trybie okrętu mogą same się bronić
 
 Spain = Hiszpania
 Isabella = Izabella
