--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -557,7 +557,7 @@ We will remember this. =
  # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
  # Requires translation!
-[civName] has denounced [targetCivName]!" = 
+[civName] has denounced [targetCivName]! = 
 
  # Requires translation!
 Unforgivable = 
