--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -322,7 +322,7 @@ We will remember this. = Мы это запомним
  # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
  # Requires translation!
-[civName] has denounced [targetCivName]!" = 
+[civName] has denounced [targetCivName]! = 
 
 Unforgivable = Непростительно враждебные
 Enemy = Враждебные
