--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -322,7 +322,7 @@ We will remember this. = 这种侮辱我们绝不会忘记。请好自为之！
  # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
  # Requires translation!
-[civName] has denounced [targetCivName]!" = 
+[civName] has denounced [targetCivName]! = 
 
 Unforgivable = 仇深似海
 Enemy = 宿命之敌
