--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -323,7 +323,7 @@ We will remember this. = Recordaremos esto.
  # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
  # Requires translation!
-[civName] has denounced [targetCivName]!" = 
+[civName] has denounced [targetCivName]! = 
 
 Unforgivable = Imperdonable
 Enemy = Enemigo
