--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -317,7 +317,7 @@ We will remember this. =
 [civName] has declared war on [targetCivName]! = 
 [civName] and [targetCivName] have signed the Peace Treaty! = 
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-[civName] has denounced [targetCivName]!" = 
+[civName] has denounced [targetCivName]! = 
 
 Unforgivable = 
 Enemy = 
