--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -323,7 +323,7 @@ We will remember this. = To vám nikdy nezapomeneme!
  # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
  # Requires translation!
-[civName] has denounced [targetCivName]!" = 
+[civName] has denounced [targetCivName]! = 
 
 Unforgivable = Nenávist
 Enemy = Nepřátelství
