Fix natural wonders (#1550)
* Natural Wonders Uniques

* Fix Natural Wonders in Map Editor

* Translation files

* Terrain uniques test

* GBR spawn update Fix #1552

--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -910,7 +910,8 @@ Cost = Costo
 May contain [listOfResources] = Può contenere [listOfResources]
 Upgrades to [upgradedUnit] = Aggiorna a [upgradedUnit]
 Obsolete with [obsoleteTech] = Diventa obsoleta con [obsoleteTech]
-Occurs on [listOfTerrains] = Può avvenire/avviene su [listOfTerrains]
+Occurs on [listOfTerrains] = Si può trovare su [listOfTerrains]
+Placed on [terrainType] = Si trova su [terrainType]
 Can be found on  = Può trovarsi su
 Improved by [improvement] = Può essere migliorato/a da [improvement]
 Bonus stats for improvement:  = Bonus per miglioramento: 
@@ -1293,6 +1294,11 @@ Rock of Gibraltar = Rocca di Gibilterra
 Cerro de Potosi = Cerro Rico de Potosí
 El Dorado = El Dorado
 Fountain of Youth = Fonte della giovinezza
+
+# Natural Wonders Uniques
+
+Grants 500 Gold to the first civilization to discover it = Fornisce 500 Oro per la prima civiltà a scoprirla
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Fornisce Ringiovanimento (tutti gli effetti di cura raddoppiati) alle unità militari terrestri adiacenti per il resto della partita
 
 # Resources
 
