--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -912,6 +912,8 @@ May contain [listOfResources] = Може містити [listOfResources]
 Upgrades to [upgradedUnit] = Удосконалюється до [upgradedUnit]
 Obsolete with [obsoleteTech] = Застарілий після [obsoleteTech]
 Occurs on [listOfTerrains] = З’являється на [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Може бути знайдений в
 Improved by [improvement] = Удосконалив [improvement]
 Bonus stats for improvement:  = Бонусні характеристики за удосконалення:
@@ -1301,6 +1303,12 @@ Rock of Gibraltar = Гібралтарська скеля
 Cerro de Potosi = Серро-Ріко
 El Dorado = Ельдорадо 
 Fountain of Youth = Джерело вічної молодості
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
