--- a/android/assets/jsons/translationsByLanguage/completionPercentages.properties
+++ b/android/assets/jsons/translationsByLanguage/completionPercentages.properties
@@ -2,8 +2,9 @@ Traditional_Chinese = 97
 Italian = 100
 Polish = 99
 Russian = 99
+Polish = 99
 Romanian = 49
-Korean = 95
+Korean = 94
 Simplified_Chinese = 97
 German = 96
 English = 0
