--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -911,6 +911,8 @@ May contain [listOfResources] = Może zawierać [listOfResources]
 Upgrades to [upgradedUnit] = Ulepsz do [upgradedUnit]
 Obsolete with [obsoleteTech] = Przestarzałe z [obsoleteTech]
 Occurs on [listOfTerrains] = Występuje na [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Znajduje się na
 Improved by [improvement] = Ulepszone przez [improvement]
 Bonus stats for improvement:  = Bonusowe statystyki dla ulepszeń
@@ -1293,6 +1295,12 @@ Rock of Gibraltar = Skała Gibraltarska
 Cerro de Potosi = Cerro de Potosi
 El Dorado = El Dorado
 Fountain of Youth = Źródło młodości
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
