--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -911,6 +911,8 @@ May contain [listOfResources] = Puede contener [listOfResources]
 Upgrades to [upgradedUnit] = Mejora a [upgradedUnit]
 Obsolete with [obsoleteTech] = Se hace obsoleto con [obsoleteTech]
 Occurs on [listOfTerrains] = Ocurre en [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Se puede encontrar en
 Improved by [improvement] = Mejorado por [improvement]
 Bonus stats for improvement:  = Bonus de atributos por mejora:
@@ -1293,6 +1295,12 @@ Rock of Gibraltar = Peñón de Gibraltar
 Cerro de Potosi = Cerro de Potosí
 El Dorado = El Dorado
 Fountain of Youth = Fuente de la juventud
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
