--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -920,7 +920,7 @@ Defence bonus = Bonus di Difesa
 Movement cost = Costi di movimento
 Rough Terrain = Terreno accidentato
  for  =  per 
-Missing translations: = Traduzioni mancanti:
+Missing translations: = Traduzioni mancanti: 
 Version = Versione
 Resolution = Risoluzione
 Tileset = Set celle
@@ -1297,8 +1297,8 @@ Fountain of Youth = Fonte della giovinezza
 
 # Natural Wonders Uniques
 
-Grants 500 Gold to the first civilization to discover it = Fornisce 500 Oro per la prima civiltà a scoprirla
-Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Fornisce Ringiovanimento (tutti gli effetti di cura raddoppiati) alle unità militari terrestri adiacenti per il resto della partita
+Grants 500 Gold to the first civilization to discover it = Fornisce 500 Oro al primo giocatore che la scopre
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Tutte le unità nelle vicinanze guariscono a velocità doppia per il resto della partita
 
 # Resources
 
