--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -1331,6 +1331,7 @@ El Dorado =
 Fountain of Youth = Fontána mládí
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1469,16 +1470,24 @@ Pikeman = Pikenýr
 Landsknecht = Landsknecht
 Knight = Rytíř
 Camel Archer = Lučištník na velbloudu
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Naresuanův slon
 Samurai = Samuraj
 Combat very likely to create Great Generals = Má velkou šanci získat Velkého generála v bitvě
 Caravel = Karavela
 Turtle Ship = Želví loď
 +1 Visibility Range = +1 větší viditelnost
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Dělo
 Musketman = Střelec s mušketou
 Musketeer = Mušketýr
 Janissary = Janičář
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Léčí [amountHealed] zranění pokud zabije jednotku
 Minuteman = Minutemen
 Frigate = Fregata
