--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -2162,6 +2162,7 @@ El Dorado =
 Fountain of Youth = 
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -2365,6 +2366,10 @@ Knight =
  # Requires translation!
 Camel Archer = 
  # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
+ # Requires translation!
 Naresuan's Elephant = 
  # Requires translation!
 Samurai = 
@@ -2377,6 +2382,8 @@ Turtle Ship =
  # Requires translation!
 +1 Visibility Range = 
  # Requires translation!
++2 Visibility Range = 
+ # Requires translation!
 Cannon = 
  # Requires translation!
 Musketman = 
@@ -2384,6 +2391,8 @@ Musketman =
 Musketeer = 
  # Requires translation!
 Janissary = 
+ # Requires translation!
+Tercio = 
  # Requires translation!
 Heals [amountHealed] damage if it kills a unit = 
  # Requires translation!
