--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -1298,6 +1298,7 @@ El Dorado = El Dorado
 Fountain of Youth = Fontaine de Jouvence
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1436,16 +1437,24 @@ Pikeman = Piquier
 Landsknecht = Lansquenet
 Knight = Chevalier
 Camel Archer = Archer méhariste
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Elephant de Naresuan
 Samurai = Samuraï
 Combat very likely to create Great Generals = A de grande chance de faire apparaitre un général illustre suite à un combat
 Caravel = Caravelle
 Turtle Ship = Bateau Tortue
 +1 Visibility Range = +1 à la Portée de Vision
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Canon
 Musketman = Arquebusier
 Musketeer = Mousquetaire
 Janissary = Janissaire
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Soigne [amountHealed] dégâts si il tue une unité
 Minuteman = Minuteman
 Frigate = Frégate
