--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1339,6 +1339,7 @@ El Dorado = El Dorado
 Fountain of Youth = Jungbrunnen
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1477,16 +1478,24 @@ Pikeman = PikenierIn
 Landsknecht = Landsknecht
 Knight = RitterIn
 Camel Archer = Kamel-Bogenschütze
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Naresuans Elefant
 Samurai = Samurai
 Combat very likely to create Great Generals = Der Kampf wird sehr wahrscheinlich große Generäle schaffen.
 Caravel = Karavelle
 Turtle Ship = Schildkrötenboot
 +1 Visibility Range = +1 Sichtweite
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Kanone
 Musketman = Musketschütze
 Musketeer = Musketier
 Janissary = Janitschar
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Heilt [amountHealed] Schaden beim Töten einer Einheit
 Minuteman = Minuteman
 Frigate = Fregatte
