--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -1433,16 +1433,20 @@ Pikeman = Picchiere
 Landsknecht = Lanzichenecco
 Knight = Cavaliere
 Camel Archer = Arciere su cammello
+Conquistador = Conquistador
+Defense bonus when embarked = Difesa bonus quando imbarcato
 Naresuan's Elephant = Elefante di Naresuan
 Samurai = Samurai
 Combat very likely to create Great Generals = Può generare un Grande Generale combattendo
 Caravel = Caravella
 Turtle Ship = Nave tartaruga
 +1 Visibility Range = +1 raggio di Visione
++2 Visibility Range = +2 raggio di Visione
 Cannon = Cannone
 Musketman = Soldato con moschetto
 Musketeer = Moschettiere
 Janissary = Giannizzero
+Tercio = Tercio
 Heals [amountHealed] damage if it kills a unit = Cura [amountHealed] PF quando uccide un'unità nemica
 Minuteman = Minuteman
 Frigate = Fregata
