--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -1363,6 +1363,7 @@ El Dorado =
 Fountain of Youth = 
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1501,16 +1502,24 @@ Pikeman = 장창병
 Landsknecht = 란츠크네흐트
 Knight = 기사
 Camel Archer = 낙타궁병
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = 나레수안 전투코끼리
 Samurai = 사무라이
 Combat very likely to create Great Generals = 전투 시 위대한 장군 출현율 크게 증가
 Caravel = 캐러벨
 Turtle Ship = 거북선
 +1 Visibility Range = 시야 범위 +1
+ # Requires translation!
++2 Visibility Range = 
 Cannon = 대포
 Musketman = 머스킷총병
 Musketeer = 총사대
 Janissary = 예니체리
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = 유닛 처치 시 체력 [amountHealed] 회복
 Minuteman = 민병대
 Frigate = 프리깃
