--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -2215,6 +2215,7 @@ El Dorado =
 Fountain of Youth = 
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -2479,6 +2480,10 @@ Knight =
  # Requires translation!
 Camel Archer = 
  # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
+ # Requires translation!
 Naresuan's Elephant = 
  # Requires translation!
 Samurai = 
@@ -2491,6 +2496,8 @@ Turtle Ship =
  # Requires translation!
 +1 Visibility Range = 
  # Requires translation!
++2 Visibility Range = 
+ # Requires translation!
 Cannon = 
  # Requires translation!
 Musketman = 
@@ -2498,6 +2505,8 @@ Musketman =
 Musketeer = 
  # Requires translation!
 Janissary = 
+ # Requires translation!
+Tercio = 
  # Requires translation!
 Heals [amountHealed] damage if it kills a unit = 
  # Requires translation!
