--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1514,6 +1514,7 @@ El Dorado =
 Fountain of Youth = 
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1652,16 +1653,24 @@ Pikeman = Piqueiro
 Landsknecht = Landsknecht
 Knight = Cavaleiro
 Camel Archer = Arqueiro de camelo
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Elefante de Naresuan
 Samurai = Samurai
 Combat very likely to create Great Generals = Combate muito provável de criar Grandes Generais
 Caravel = Caravela
 Turtle Ship = Navio Tartaruga
 +1 Visibility Range = +1 de alcance do campo de visão
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Canhão
 Musketman = Soldado com mosquete
 Musketeer = Mosqueteiro
 Janissary = Janisário
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Cura [amountHealed] de dano se destruir uma unidade
 Minuteman = Mílicia
 Frigate = Fragata
