--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1869,6 +1869,7 @@ El Dorado =
 Fountain of Youth = 
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -2037,6 +2038,10 @@ Landsknecht =
 Knight = Cavaler
 Camel Archer = Arcaș pe cămilă
  # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
+ # Requires translation!
 Naresuan's Elephant = 
  # Requires translation!
 Samurai = 
@@ -2046,11 +2051,15 @@ Caravel = Caravelă
  # Requires translation!
 Turtle Ship = 
 +1 Visibility Range = +1 Rază vizuală
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Tun
 Musketman = Muschetar
 Musketeer = Muschetar
  # Requires translation!
 Janissary = 
+ # Requires translation!
+Tercio = 
  # Requires translation!
 Heals [amountHealed] damage if it kills a unit = 
 Minuteman = Rezervist
