--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -1298,6 +1298,7 @@ El Dorado = Эльдорадо
 Fountain of Youth = Фонтан вечной молодости
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1436,16 +1437,24 @@ Pikeman = Пикинер
 Landsknecht = Ландскнехт
 Knight = Рыцарь
 Camel Archer = Лучник на верблюде
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
 Combat very likely to create Great Generals = Большой шанс получения Великого Полководца в бою
 Caravel = Каравелла
 Turtle Ship = Кобуксон
 +1 Visibility Range = +1 Диапазон видимости
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Пушка
 Musketman = Стрельцы
 Musketeer = Мушкетёр
 Janissary = Янычары
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Восстаналивает [amountHealed] здоровья при уничтожении юнита
 Minuteman = Минитмэн
 Frigate = Фрегат
