--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -1329,6 +1329,7 @@ El Dorado = 黄金国
 Fountain of Youth = 青春之泉
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1467,16 +1468,24 @@ Pikeman = 长枪兵
 Landsknecht = 自由佣兵
 Knight = 骑士
 Camel Archer = 骆驼骑射手
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = 纳黎萱战象
 Samurai = 日本武士
 Combat very likely to create Great Generals = 战斗能更快地产生出大军事家
 Caravel = 轻帆船
 Turtle Ship = 龟船
 +1 Visibility Range = +1视野
+ # Requires translation!
++2 Visibility Range = 
 Cannon = 加农炮
 Musketman = 火枪手
 Musketeer = 法国火枪手
 Janissary = 苏丹亲兵
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = 消灭敌方单位后回复[amountHealed]生命值
 Minuteman = 快速民兵
 Frigate = 护卫舰
