--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1329,6 +1329,7 @@ El Dorado = 黃金國
 Fountain of Youth = 青春之泉
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1467,16 +1468,24 @@ Pikeman = 長槍兵
 Landsknecht = 自由傭兵
 Knight = 騎士
 Camel Archer = 駱駝騎射手
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = 納黎萱戰象
 Samurai = 日本武士
 Combat very likely to create Great Generals = 戰鬥能更快的產生大軍事家
 Caravel = 輕帆船
 Turtle Ship = 龜船
 +1 Visibility Range = +1視野
+ # Requires translation!
++2 Visibility Range = 
 Cannon = 加農砲
 Musketman = 火槍手
 Musketeer = 法國火槍手
 Janissary = 蘇丹親兵
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = 消滅敵方單位後回復[amountHealed]生命值
 Minuteman = 快速民兵
 Frigate = 護衛艦
