--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -1433,16 +1433,20 @@ Pikeman =
 Landsknecht = 
 Knight = 
 Camel Archer = 
+Conquistador = 
+Defense bonus when embarked = 
 Naresuan's Elephant = 
 Samurai = 
 Combat very likely to create Great Generals = 
 Caravel = 
 Turtle Ship = 
 +1 Visibility Range = 
++2 Visibility Range = 
 Cannon = 
 Musketman = 
 Musketeer = 
 Janissary = 
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = 
 Minuteman = 
 Frigate = 
