--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -2408,6 +2408,7 @@ El Dorado =
 Fountain of Youth = 
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -2668,6 +2669,10 @@ Knight =
  # Requires translation!
 Camel Archer = 
  # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
+ # Requires translation!
 Naresuan's Elephant = 
  # Requires translation!
 Samurai = 
@@ -2680,6 +2685,8 @@ Turtle Ship =
  # Requires translation!
 +1 Visibility Range = 
  # Requires translation!
++2 Visibility Range = 
+ # Requires translation!
 Cannon = 
  # Requires translation!
 Musketman = 
@@ -2687,6 +2694,8 @@ Musketman =
 Musketeer = 
  # Requires translation!
 Janissary = 
+ # Requires translation!
+Tercio = 
  # Requires translation!
 Heals [amountHealed] damage if it kills a unit = 
  # Requires translation!
