--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -1297,6 +1297,7 @@ El Dorado = El Dorado
 Fountain of Youth = Źródło młodości
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1435,16 +1436,24 @@ Pikeman = Wojownik z piką
 Landsknecht = Landsknecht
 Knight = Rycerz
 Camel Archer = Łucznik na wielbłądzie
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Słoń Naresuan
 Samurai = Samuraj
 Combat very likely to create Great Generals = Walka może wyłonić Wielkich Generałów
 Caravel = Karawela
 Turtle Ship = Geobukseon
 +1 Visibility Range = +1 do pola widzenia
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Armata
 Musketman = Strzelec z muszkietem
 Musketeer = Muszkieter
 Janissary = Janczar
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Leczy [amountHealed] obrażeń po zabiciu jednostki
 Minuteman = Minuteman
 Frigate = Fregata
