--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -1297,6 +1297,7 @@ El Dorado = El Dorado
 Fountain of Youth = Fuente de la juventud
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1435,16 +1436,24 @@ Pikeman = Piquero
 Landsknecht = Lansquenete
 Knight = Caballero
 Camel Archer = Arquero a camello
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Elefante Naresuan
 Samurai = Samurai
 Combat very likely to create Great Generals = Es mas probable que se creen Grandes Generales a través del combate
 Caravel = Caravela
 Turtle Ship = Barco tortuga
 +1 Visibility Range = +1 al Rango de Visibilidad
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Cañón
 Musketman = Mosquetero
 Musketeer = Mosquetero Revolucionario
 Janissary = Jenízaro
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Se cura [amountHealed] de daño si mata a una unidad
 Minuteman = Milicia Revolucionaria
 Frigate = Fragata
