--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -392,7 +392,7 @@ Gold per turn = Золота за хід
 Cities = Міста
 Technologies = Технології
 Declarations of war = Оголошення війни
-Introduction to [nation] = Вступ до [nation]
+Introduction to [nation] = Познайомити з [nation]
 Declare war on [nation] = Оголосити війну [nation]
 Luxury resources = Ресурси розкоші
 Strategic resources = Стратегічні ресурси
