Update Ukrainian.properties (#1551)
Update tutorial tasks

--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -2,23 +2,22 @@
 # Tutorial tasks
 
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Перемістіть підрозділ!\nНатисніть на підрозділ > Натисніть на пункт призначення > Натисніть на стрілку
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Спробуйте заснувати міста\nВиберіть Поселенця (із значком прапора) > Натисніть на «Заснувати місто»
-Enter the city screen!\nClick the city button twice = Зайдіть на екран міста!\nНатисніть на кнопку міста двічі
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Виберіть технологію для дослідження!\nНатисніть на кнопку технологій (зеленувата, верхня ліва) > \n виберіть технологію > натисніть «Дослідити»(нижня ліва)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Виберіть що створювати!\nУвійдіть до екрану міста > Натисніть на підрозділ чи будівлю (ліворуч)
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустіть хід!\nНатисніть багато раз на «Наступний підрозділ» > Натисніть на «Наступний хід»
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Перевстановіть клітини, на яких працюють городяни!\nУвійдіть до екрану міста > натисніть на призначену (зелену) клітину, щоб зробити непризначеною > \n натисніть на непризначену клітину, щоб зробити призначеною
-Meet another civilization!\nExplore the map until you encounter another civilization! = Зустріньте іншу цивілізацію!\nДосліджуйте мапу для зустрічі з іншої цивілізацією!
-Open the options table!\nClick the menu button (top left) > click 'Options' = Відкрийте вкладку з налаштуваннями\nНатисніть на кнопку меню (зверху ліворуч) > Натисність на «Налаштування»
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Створіть торговий шлях!\nБудуйте дороги між вашою столицею та іншим містом\nАбо автоматизуйте свого робітника і дозвольте йому зробити це автоматично 
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Захопіть місто!\n Зробіть так, щоб у міста майже лишалось здоров’я > \nУвійдіть до міста з ближньобійником
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Перемістіть повітряний підрозділ!\nВиберіть його !\n виберіть інше місто в радіусі дії > \nПеремість підрозділ в інше місто
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Подивіться статистику\nУвійдіть до екрану огляну (верхній правий вугол) >\nНатисніть на «Статистика»
-
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Жах! Схоже щось пішло КАТАСТРОФІЧНО неправильно! Цього АБСОЛЮТНО НЕ ПОВИННО БУЛО СТАТИСЯ! Будь ласка, надішліть мені (yairm210@hotmail.com) електронний лист з ігровою інформацією (меню -> зберегти гру -> копіювати інформацію про гру -> вставити до email) і я спробую виправити якнайшвидше!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Жах! Схоже щось пішло КАТАСТРОФІЧНО неправильно! Цього АБСОЛЮТНО НЕ ПОВИННО БУЛО СТАТИСЯ! Будь ласка, надішліть нам звіт про помилку і ми виправимо якнайшидше.
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Заснуйте місто\nОберіть Поселенця (зі значком прапора) > \nНатисніть «Заснувати місто» (нижній лівий кут)
+Enter the city screen!\nClick the city button twice = Відкрийте екран міста!\nНатисніть на кнопку міста двічі
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Оберіть технологію для дослідження!\nНатисніть кнопку технологій (зеленувата, верхня ліва) > \n оберіть технологію > Натисніть «Дослідити» (нижня ліва)
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Оберіть будову!\nВідкрийте екран міста > Натисніть на підрозділ чи будівлю (ліворуч)
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустіть хід!\nНатисніть багато разів «Наступний підрозділ» >\n Натисніть «Наступний хід»
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Перепризначте робочі клітинки!\nВідкрийте екран міста > натисніть на призначену (зелену) клітинку, щоб зробити непризначеною > \n натисніть на непризначену клітинку, щоб зробити призначеною
+Meet another civilization!\nExplore the map until you encounter another civilization! = Зустріньте іншу цивілізацію!\nДосліджуйте мапу до зустрічі з іншою цивілізацією!
+Open the options table!\nClick the menu button (top left) > click 'Options' = Відкрийте вкладку з налаштуваннями\nНатисніть кнопку меню (згори ліворуч) >\n Натисність «Налаштування»
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Збудуйте поліпшення! \n Збудуйте Робітника > Перемістіться до клітинки рівнини чи пасовища > \n 
+Натисність «Створити поліпшення» (над віконцем довідки, знизу ліворуч) \ n> Оберіть ферму> \ n Залиште Робітника до закінчення роботи
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Створіть торговий шлях!\nБудуйте дороги між вашою столицею та іншим містом\nАбо автоматизуйте робітника і дозвольте йому зробити це самому
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Захопіть місто!\n Зменшіть здоров’я міста до низького рівня> \nУвійдіть до міста з ближньобійником
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Перемістіть повітряний підрозділ!\nОберіть його !\n оберіть інше місто в радіусі дії > \nПеремість підрозділ в інше місто
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Подивіться статистику\nУвійдіть до екрану огляну (верхній правий кут) >\nНатисніть кнопку «Статистика»
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Трясця! Схоже, відбулася КАТАСТРОФІЧНА помилка! Цього ЗОВСІМ НЕ МАЛО СТАТИСЯ! Будь ласка, надішліть мені (yairm210@hotmail.com) електронний лист англійською з ігровою інформацією (меню -> зберегти гру -> копіювати інформацію про гру -> вставити до email) і я спробую виправити якнайшвидше!
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Трясця! Схоже, відбулася КАТАСТРОФІЧНА помилка! Цього ЗОВСІМ НЕ МАЛО СТАТИСЯ! Будь ласка, надішліть нам звіт про помилку і ми виправимо якнайшидше.
 
 # Buildings
 
