External merge resolve of #1566
Merge branch 'spain' of https://github.com/r3versi/Unciv into r3versi-spain

--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -490,7 +490,7 @@ Isabella = Ізабелла
 # New game screen
 
 Uniques = Унікальні
-Promotions = Акції
+Promotions = Підвищення
 Barbarians = Варвари
 Load copied data = Завантажити копію даних
 Could not load game from clipboard! = Неможливо завантажити гру з буфера обміну
@@ -994,12 +994,11 @@ Citizenship = Права і обов'язки громадянина
 Tile improvement speed +25%, receive a free worker near the capital = Покращення клітинок відбувається на +25% швидше, новий працівник коло столиці
 Republic = Республіка
  # Requires translation!
-+1 construction in every city, +5% construction when constructing buildings =
++1 construction in every city, +5% construction when constructing buildings = 
 Representation = Представництво
 Each city founded increases culture cost of policies 33% less than normal. Starts a golden age. = Кожне засноване місто зменшує ціну інституту на 33%. Розпочинає золотий вік.
 Meritocracy = Меритократія
 +1 happiness for every city connected to capital, -5% unhappiness from citizens = +1 щастя в кожному місті з'єднаному зі столицею, -5% нещастя від громадян
- # Requires translation!
 Liberty Complete = Лібералізм завершено
 Free Great Person of choice near capital = Безкоштовна велика людина біля столиці
 
@@ -1304,6 +1303,7 @@ El Dorado = Ельдорадо
 Fountain of Youth = Джерело вічної молодості
 
 # Natural Wonders Uniques
+
  # Requires translation!
 Grants 500 Gold to the first civilization to discover it = 
  # Requires translation!
@@ -1442,16 +1442,24 @@ Pikeman = Пікінер
 Landsknecht = Ландскнехт
 Knight = Лицар
 Camel Archer = Лучник на верблюді
+ # Requires translation!
+Conquistador = 
+ # Requires translation!
+Defense bonus when embarked = 
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
 Combat very likely to create Great Generals = Висока вірогідність отримати у битві видатного генерала
 Caravel = Каравела
 Turtle Ship = Кобуксон
 +1 Visibility Range = Дальність огляду +1
+ # Requires translation!
++2 Visibility Range = 
 Cannon = Гармата
 Musketman = Мушкетник
 Musketeer = Мушкетер
 Janissary = Яничари
+ # Requires translation!
+Tercio = 
 Heals [amountHealed] damage if it kills a unit = Відновлення [amountHealed] пошкоджень при знищенні підрозділу
 Minuteman = Ополченець
 Frigate = Фрегат
